Add navbar to index.html

--- a/index.html
+++ b/index.html
@@ -21,6 +21,29 @@
     />
   </head>
   <body>
+    <header>
+      <div class="navbar">
+        <div class="nav-container flex">
+          <div class="logo flex-center">
+            <img src="./images/icon.png" alt="logo" />
+          </div>
+          <div class="menu-icon">
+            <img src="./images/menu-icon.png" alt="menu-icon" />
+          </div>
+        </div>
+      </div>
+      <div class="menu-links flex-center">
+        <div class="close-icon">
+          <img src="./images/close.png" alt="close-icon" />
+        </div>
+        <ul class="menu-link-cont flex-center">
+          <li><a href="home">Home</a></li>
+          <li><a href="menu">Menu</a></li>
+          <li><a href="about">About</a></li>
+          <li><a href="contact">Contact</a></li>
+        </ul>
+      </div>
+    </header>
     <!-- scripts -->
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <script src="./javascript/script.js"></script>
