Add hero section and why-us section to index.html and index.scss

--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
       rel="stylesheet"
     />
   </head>
+
   <body>
     <header>
       <div class="navbar">
@@ -44,6 +45,68 @@
         </ul>
       </div>
     </header>
+    
+    <!-- hero section -->
+
+    <section class="hero-section">
+      <div class="hero-section__wrapper">
+        <h1>Delicious Food</h1>
+        <p>
+          Indulge in a culinary adventure where every bite is a burst of delightful
+          flavors, creating a symphony of taste that will leave you craving for more.
+        </p>
+        <div class="hero-section__button">
+          <button class="theme-btn" aria-label="Toggle Theme">Order Online</button>
+        </div>
+      </div>
+    </section>
+
+    <section class="why-us section-padding" data-aos="fade-up">
+      <div class="why-us__wrapper flex-center container">
+        <div class="why-us__content">
+          <h3>Why Choose Us?</h3>
+          <h2>Serving You Great Time</h2>
+          <p>
+            We are a team of passionate foodies who love to cook and serve. We
+            believe in the power of food to bring people together and make
+            moments special. We are committed to providing our customers with
+            the best dining experience possible.
+          </p>
+          <p>
+            We believe in the power of food to bring people
+            together and make moments special.
+          </p>
+          <button class="theme-btn" aria-label="Toggle Theme">Our Story</button>
+        </div>
+        <div class="why-us__image">
+          <picture>
+            <source 
+              media="(max-width: 767px)" 
+              srcset="./images/girl-in-resto.jpg"
+            />
+            <img src="./images/lady.jpg" alt="lady" />
+          </picture>
+        </div>
+      </div>
+    </section>
+
+    <section class="explore" data-aos="fade-up">
+      <div class="explore__wrapper flex-center container">
+        <h3>Explore</h3>
+        <h2>Menu Features</h2>
+
+        <div class="card-container">
+          <div class="cards">
+            <img src="./images/salad-white.png" alt="food" />
+            <h4>Always Fresh</h4>
+            <p>
+              We use only the freshest ingredients to ensure that every dish is
+              bursting with flavor.
+          </div>
+        </div>
+      </div>
+    </section>
+
     <!-- scripts -->
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <script src="./javascript/script.js"></script>
