Add explore and clients sections to index.css and index.scss

--- a/index.html
+++ b/index.html
@@ -102,8 +102,74 @@
             <p>
               We use only the freshest ingredients to ensure that every dish is
               bursting with flavor.
+            </p>
+          </div>
+
+          <div class="cards">
+              <img src="./images/salad-white.png" alt="food" />
+              <h4>Always Fresh</h4>
+              <p>
+                We use only the freshest ingredients to ensure that every dish is
+                bursting with flavor.
+              </p>
+          </div>
+
+          <div class="cards">
+            <img src="./images/salad-white.png" alt="food" />
+              <h4>Always Fresh</h4>
+              <p>
+                We use only the freshest ingredients to ensure that every dish is
+                bursting with flavor.
+              </p>
           </div>
         </div>
+        <div class="menu-button">
+          <button class="theme-btn" aria-label="Toggle Theme">View Menu</button>
+        </div>
+      </div>
+    </section>
+
+    <!--clients-->
+
+    <section class="clients" data-aos="fade-up">
+      <div class="clients__wrapper flex-center container">
+        <h3>Our</h3>
+        <h2>Clients</h2>
+        <div class="card-container">
+          <div class="cards">
+            <img src="./images/quote-end.png" alt="quote-end" />
+            <p>
+              The culinary experience provided by your team is truly exceptional. Every dish
+              tells a story of passion and dedication. Our guests at Marubani Tech have
+              consistently praised the delightful flavors and impeccable presentation.
+            </p>
+            <h3>John Baraka</h3>
+            <h4>CEO, Marubani Tech</h4>
+          </div>
+
+          <div class="cards">
+            <img src="./images/quote-end.png" alt="quote-end" />
+            <p>
+              I am genuinely impressed by the quality of your food and the attention to
+              detail. The diverse menu caters to all tastes, and the flavors are simply
+              outstanding. Our event was a great success, thanks to your culinary expertise.
+            </p>
+            <h3>Christina Machava</h3>
+            <h4>Event Coordinator, Maduka Marketing Agency</h4>
+          </div>
+
+          <div class="cards">
+            <img src="./images/quote-end.png" alt="quote-end" />
+            <p>
+              Exceptional service, exquisite dishes, and a delightful atmosphere. Your team
+              exceeded our expectations, creating a memorable dining experience for our
+              clients. We look forward to continuing our partnership with your catering services.
+            </p>
+            <h3>Abel Kimani</h3>
+            <h4>Marketing Director, Angaza Solar</h4>
+          </div>
+        </div>
+      </div>
       </div>
     </section>
 
