--- a/index.html
+++ b/index.html
@@ -173,6 +173,51 @@
       </div>
     </section>
 
+    <!-- gallery -->
+
+    <section class="gallery section-padding" data-aos="fade-up">
+      <div class="gallery__wrapper container">
+        <div class="i1">
+          <img src="./images/gallery-2.jpg" alt="gallery-1" />
+        </div>
+        <div class="i2">
+          <img src="./images/gallery-3.jpg" alt="gallery-1" />
+        </div>
+        <div class="i3">
+          <img src="./images/gallery-4.jpg" alt="gallery-1" />
+        </div>
+        <div class="i4">
+          <img src="./images/gallery-4.jpg" alt="gallery-1" />
+        </div>
+        <div class="i5">
+          <img src="./images/gallery-6.jpg" alt="gallery-1" />
+        </div>
+        <div class="i6">
+          <img src="./images/gallery-5.jpg" alt="gallery-1" />
+        </div>
+      </div>
+    </section>
+
+    <section class="contact-section section-padding" data-aos="fade-up">
+      <div class="contact-section__wrapper flex-center">
+        <h3>Find Us</h3>
+        <h2>Our Address</h2>
+        <p>
+          Tumbuktu Gardens, Opp Maria Clara Facility, Nairobi, Kenya
+        </p>
+      </div>
+    </section>
+
+   <section class="getEmail section-padding" data-aos="fade-up">
+    <div class="getEmail__wrapper flex-center">
+      <img src="./images/icon.png"  class="logo"  alt="logo" />
+      <h2>Stay updated with deals</h2>
+      <form action="">
+        <input type="email" placeholder="Enter your email" />
+        <button class="theme-btn theme-btn--grey" aria-label="Toggle Theme">Subscribe</button>
+    </div>
+   </section>
+
     <!-- scripts -->
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <script src="./javascript/script.js"></script>
