Update title and footer in index.html and index.scss

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Organic Cafe</title>
+    <title>Kibanda 2.0</title>
 
     <!-- css -->
     <!-- animate on scroll css -->
@@ -214,10 +214,28 @@
       <h2>Stay updated with deals</h2>
       <form action="">
         <input type="email" placeholder="Enter your email" />
-        <button class="theme-btn theme-btn--grey" aria-label="Toggle Theme">Subscribe</button>
+        <button class="theme-btn theme-btn--grey" aria-label="Toggle Theme" type="button">Subscribe</button>
     </div>
    </section>
 
+   <!-- footer -->
+
+   <footer>
+      <ul class="footer-menu-links">
+        <li><a href="home">Home</a></li>
+        <li><a href="menu">Menu</a></li>
+        <li><a href="about">About</a></li>
+        <li><a href="contact">Contact</a></li>
+      </ul>
+
+      <div class="social-icons">
+        <img src="./images/facebook-w.png" alt="facebook" />
+        <img src="./images/instagram-w.png" alt="instagram" />
+        <img src="./images/twitter-w.png" alt="twitter" />
+        <img src="./images/youtube-play-w.png" alt="youtube" />
+      </div>
+      <p>&copy; 2024 Kibanda 2.0. All rights reserved.</p>
+   </footer>
     <!-- scripts -->
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <script src="./javascript/script.js"></script>
