Update website content and images

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 
     <section class="hero-section">
       <div class="hero-section__wrapper">
-        <h1>Delicious Food</h1>
+        <h1>Kibanda 2.0</h1>
         <p>
           Indulge in a culinary adventure where every bite is a burst of delightful
           flavors, creating a symphony of taste that will leave you craving for more.
@@ -67,10 +67,9 @@
           <h3>Why Choose Us?</h3>
           <h2>Serving You Great Time</h2>
           <p>
-            We are a team of passionate foodies who love to cook and serve. We
-            believe in the power of food to bring people together and make
-            moments special. We are committed to providing our customers with
-            the best dining experience possible.
+            Our restaurant brings a coastal vibe to the city, offering a refreshing ambience. 
+            With coastal-inspired decor and the aroma of fresh seafood, it’s a unique venue for events, 
+            giving guests a memorable experience in the heart of the city.
           </p>
           <p>
             We believe in the power of food to bring people
@@ -82,9 +81,9 @@
           <picture>
             <source 
               media="(max-width: 767px)" 
-              srcset="./images/girl-in-resto.jpg"
+              srcset="./images/girl-in-resto.jpeg"
             />
-            <img src="./images/lady.jpg" alt="lady" />
+            <img src="./images/lady.jpeg" alt="lady" />
           </picture>
         </div>
       </div>
